# Xtrainer_SImToReal

./: .gitignore  README.md
docs/: REPOSITORY_CONTENTS.md  ROADMAP.md
isaac_data_gen/: README.md
isaac_data_gen/configs/: dataset_profile.yaml  env_profile.yaml  randomization_profile.yaml
isaac_data_gen/docs/: action_mapping.md  data_schema.md
isaac_data_gen/scripts/: collect_episode.sh  common_env.sh  create_fresh_conda_env.sh  export_episode.py  fix_stage2_wheel_packaging_conflict.sh  fix_stage3_click_transformers_conflict.sh  fix_stage3_isaaclab_partial_install.sh  install_stage2_isaacsim_pip.sh  install_stage3_isaaclab_source.sh  phys100_endpoint_collection_baseline.sh  phys100_endpoint_dataset_quality.py  phys100_endpoint_dataset_quality.sh  phys20_audit_xtrainer_upstream.sh  phys20_prepare_xtrainer_upstream.sh  phys21_sync_pickcube_assets.sh  phys22_install_leisaac.sh  phys22_verify_leisaac_registry.py  phys22_verify_leisaac_registry.sh  phys23_no_camera_smoke.py  phys23_no_camera_smoke.sh  phys24_single_camera_smoke.py  phys24_single_camera_smoke.sh  phys25_multiview_demo.py  phys25_multiview_demo.sh  phys30_record_hdf5_smoke.py  phys30_record_hdf5_smoke.sh  phys31_validate_hdf5_dataset.sh  phys40_convert_hdf5_to_lerobot.py  phys40_convert_hdf5_to_lerobot.sh  phys50_randomization_smoke.py  phys50_randomization_smoke.sh  phys60_action_mapping_tests.sh  phys70_batch_smoke.sh  phys70_generate_quality_report.py  phys80_realtime_view.py  phys80_realtime_view.sh  phys81_computer_control.py  (+21 more)
ros2_xtrainer_model/: README.md
ros2_xtrainer_model/nova_vr_ws/src/nova_vr_common/: package.xml  setup.cfg  setup.py
ros2_xtrainer_model/nova_vr_ws/src/nova_vr_common/launch/: logging_smoke_test.launch.py
ros2_xtrainer_model/nova_vr_ws/src/nova_vr_common/nova_vr_common/: __init__.py  logging_smoke_test.py  project_logging.py
ros2_xtrainer_model/nova_vr_ws/src/nova_vr_common/resource/: nova_vr_common
ros2_xtrainer_model/nova_vr_ws/src/nova_vr_common/test/: test_project_logging.py
ros2_xtrainer_model/nova_vr_ws/src/nova_xtainer_bringup/: CMakeLists.txt  package.xml
ros2_xtrainer_model/nova_vr_ws/src/nova_xtainer_bringup/config/: xtainer.rviz
ros2_xtrainer_model/nova_vr_ws/src/nova_xtainer_bringup/launch/: xtainer_gazebo.launch.py  xtainer_rviz.launch.py
ros2_xtrainer_model/nova_vr_ws/src/nova_xtainer_control_bringup/: CMakeLists.txt  package.xml
ros2_xtrainer_model/nova_vr_ws/src/nova_xtainer_control_bringup/config/: xtrainer_alignment.rviz  xtrainer_alignment_initial_joints.yaml  xtrainer_control.rviz  xtrainer_full_control.rviz  xtrainer_full_control_controllers.yaml  xtrainer_mock_controllers.yaml
ros2_xtrainer_model/nova_vr_ws/src/nova_xtainer_control_bringup/launch/: xtrainer_alignment_rviz.launch.py  xtrainer_control_gazebo.launch.py  xtrainer_control_rviz.launch.py  xtrainer_dt4_ik_rviz.launch.py  xtrainer_full_control_gazebo.launch.py  xtrainer_full_control_rviz.launch.py  xtrainer_full_mock_control.launch.py  xtrainer_mock_control.launch.py
ros2_xtrainer_model/nova_vr_ws/src/nova_xtainer_control_bringup/scripts/: dt2_mock_bringup_logger.py  send_dt2_mock_command.py  send_dt4_right_ik_target.py  send_dt5_dual_ik_command.py  send_dt7_command14.py  validate_dt4_to_dt7.sh  validate_dt6_gazebo_control.sh  validate_full_control_action14.sh  validate_full_control_gazebo.sh  validate_full_control_grasp.sh  validate_full_control_tabletop_grasp.sh  xtrainer_backend.py  xtrainer_full_action_slider.py  xtrainer_full_command14.py  xtrainer_full_grasp_smoke.py  xtrainer_full_tabletop_grasp.py  xtrainer_kinematics.py
ros2_xtrainer_model/nova_vr_ws/src/nova_xtainer_description/: CMakeLists.txt  package.xml
ros2_xtrainer_model/nova_vr_ws/src/nova_xtainer_description/meshes/xtrainer_full_usd/: J1_1.stl  J1_2.stl  J1_3.stl  J1_4.stl  J1_5.stl  J1_6.stl  J1_7.stl  J1_8.stl  J2_1.stl  J2_2.stl  J2_3.stl  J2_4.stl  J2_5.stl  J2_6.stl  J2_7.stl  J2_8.stl  J3_1.stl  J3_2.stl  J3_3.stl  J3_4.stl  J3_5.stl  J3_6.stl  J4_1.stl  J4_2.stl  J4_3.stl  J4_4.stl  J4_5.stl  J4_6.stl  base_link.stl
ros2_xtrainer_model/nova_vr_ws/src/nova_xtainer_description/meshes/xtrainer_usd/: base_link.stl  base_table_only.stl  left_gripper_jaw_a.stl  left_gripper_jaw_b.stl  left_gripper_mount.stl  right_gripper_jaw_a.stl  right_gripper_jaw_b.stl  right_gripper_mount.stl
ros2_xtrainer_model/nova_vr_ws/src/nova_xtainer_description/sdf/: xtrainer_full_visual.sdf
ros2_xtrainer_model/nova_vr_ws/src/nova_xtainer_description/urdf/: nova2_prefixed.urdf.xacro  nova_xtainer.urdf.xacro
scripts/: init_and_push_template.sh  prepare_external_assets.sh  setup_isaac_env.sh  verify_source_tree.sh
(+52 files in other folders)
