<?xml version="1.0"?>
<package format="3">
  <name>nova_vr_common</name>
  <version>0.1.0</version>
  <description>Shared utilities for Nova VR teleoperation packages.</description>
  <maintainer email="user@example.com">Nova VR Project</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
