<?xml version="1.0"?>
<package format="3">
  <name>nova_xtainer_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for the X-Trainer-like Nova dual-arm digital twin.</description>
  <maintainer email="user@example.com">Nova VR Project</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>nova_xtainer_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
