<?xml version="1.0"?>
<package format="3">
  <name>nova_xtainer_description</name>
  <version>0.1.0</version>
  <description>X-Trainer-like dual Nova2 platform description for Nova VR teleop.</description>
  <maintainer email="user@example.com">Nova VR Project</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cra_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
